--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.shravya</groupId>
-  <artifactId>collabapi</artifactId>
+  <artifactId>collabapiFrontend</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>collabapi Maven Webapp</name>
@@ -15,6 +15,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.shravya</groupId>
+  <artifactId>collabapiBackend</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
     <version>4.0.1</version>
@@ -25,9 +30,26 @@
     <artifactId>spring-webmvc</artifactId>
     <version>5.1.6.RELEASE</version>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.9.9</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.9</version>
+</dependency>
     
   </dependencies>
   <build>
-    <finalName>collabapi</finalName>
+    <finalName>collabapiFrontend</finalName>
   </build>
+  <properties>
+    
+    <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
